--- a/WebDev/5A-WebDev/pages/recharge.html
+++ b/WebDev/5A-WebDev/pages/recharge.html
@@ -10,8 +10,8 @@
 <body>
     <div class="container">
         <header class="page-header">
-            <button class="back-btn" onclick="navigateToDashboard()">Back</button>
-            <h1>This is recharge page</h1>
+            <div class="back-arrow" onclick="navigateToDashboard()">🔙</div>
+            <h1>BALANCE</h1>
         </header>
         <div class="recharge-card">
             <div class="balance-display">
