--- a/WebDev/5A-WebDev/index.html
+++ b/WebDev/5A-WebDev/index.html
@@ -3,29 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coffee Shop - Register</title>
+    <title>Coffee Shop</title>
 </head>
 <body>
-    <div id="bthn" lang="he"></div>
-    <div class="container">
-        <h1>Register - temp</h1>
-        <button onclick="window.location.href='pages/dashboard.html'">Enter as a guest</button>
-        <form onsubmit="saveUsername(event)">
-            <input type="text" id="username-input" placeholder="Username">
-            <input type="password" placeholder="Password">
-            <button type="submit">Save Username</button>
-        </form>
-    </div>
-    <script src="scripts/storage.js"></script>
+
     <script>
-        function saveUsername(event) {
-            event.preventDefault();
-            const username = document.getElementById('username-input').value;
-            if (username && username.trim()) {
-                setUsername(username.trim());
-                window.location.href = 'pages/dashboard.html';
-            }
-        }
+            window.location.href = "pages/login.html";
     </script>
 </body>
 </html>
