--- a/WebDev/5A-WebDev/pages/recharge.html
+++ b/WebDev/5A-WebDev/pages/recharge.html
@@ -15,21 +15,21 @@
         </header>
         <div class="recharge-card">
             <div class="balance-display">
-                <h2>Current Balance</h2>
-                <div class="balance-amount" id="current-balance">0 $</div>
+                <h2>current-balance</h2>
+                <div class="balance-amount" id="current-balance">0 ₪</div>
             </div>
 
             <div class="recharge-form">
-                <h2>Load Card</h2>
+                <h2>Loading card</h2>
                 <div class="form-group">
-                    <label for="recharge-amount">Recharge Amount ($)</label>
+                    <label for="recharge-amount">recharge-amount($)</label>
                     <input type="number" id="recharge-amount" min="1" step="0.01" placeholder="Enter amount">
                 </div>
-                <button class="btn-primary" onclick="rechargeCard()">Load Card</button>
+                <button class="btn-primary" onclick="rechargeCard()">Load card</button>
                 <div id="recharge-message" class="message"></div>
             </div>
+            </div>
     </div>
-    <script src="../scripts/storage.js"></script>
     <script src="../scripts/global.js"></script>
     <script src="../scripts/recharge.js"></script>
 </body>
