fixed cursed footer & shit histogram

--- a/WebDev/5A-WebDev/pages/dashboard.html
+++ b/WebDev/5A-WebDev/pages/dashboard.html
@@ -29,20 +29,20 @@
                 <div class="card-icon">🍽️</div>
                 <h2>Menu</h2>
             </div>    
-                
-            <div class="card">
-                <div class="card-icon">📊</div>
-                <div id="histogram-container">
-                    <h2>Histogram - Products Bought</h2>
-                    <canvas id="histogram-chart"></canvas>
-                </div>
-            </div>
 
             <div class="card" onclick="navigateToManagement()">
                 <div class="card-icon"> ⚙️ </div>
                 <div>
                     <h2>Management screen </h2>
                     <canvas ></canvas>
+                </div>
+            </div>
+
+            <div class="card histogram-card">
+                <div class="card-icon">📊</div>
+                <div id="histogram-container">
+                    <h2>Histogram - Products Bought</h2>
+                    <canvas id="histogram-chart"></canvas>
                 </div>
             </div>
 
