added final part two solution

--- a/WebDev/5A-WebDev/pages/categories.html
+++ b/WebDev/5A-WebDev/pages/categories.html
@@ -40,11 +40,12 @@
             </div>
         </div>
     </div>
-    <script src="../scripts/storage.js"></script>
-    <script src="../scripts/global.js">
-    </script>
 
-<script>
+    <script src="../scripts/global.js"></script>
+    <script src="../scripts/categories.js"></script>
+
+
+<!--<script>
 
     //check if file uploaded and transfer the category name to the next page
     function transferCategory(clicked) {
@@ -80,7 +81,7 @@
         setTimeout(function () {alertBox.remove()}, 3500);
     }
 
-</script>
+</script>-->
 
 </body>
 </html>
