--- a/WebDev/5A-WebDev/pages/dashboard.html
+++ b/WebDev/5A-WebDev/pages/dashboard.html
@@ -28,7 +28,13 @@
             <div class="card" onclick="navigateToCategories()">
                 <div class="card-icon">🍽️</div>
                 <h2>Menu</h2>
-            </div>    
+            </div>
+            <div class="card" onclick="navigateToRecommendations()">
+                <div class="card-icon"> 📬 </div>
+                <div>
+                    <h2>Recommendations</h2>
+                </div>
+            </div>
 
             <div class="card" onclick="navigateToManagement()">
                 <div class="card-icon"> ⚙️ </div>
